# ai_interlocutor

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  logger.py  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: workflow.yml
